2020-08-31  Alexander Lind  <A.Lind@sussex.ac.uk>

	* src/input.f90: Minor cleaning up and bug fixes. 
	* src/hboson.f90: Minor cleaning up. 
	* src/banner.f90: Updated help message. 
	* configure.ac: Updated the setting of USERFILE_OBJ. 
	* Makefile.am: Updated the setting of USERFILE_OBJ. 
	* src/Makefile.am: Updated the setting of USERFILE_OBJ. 

2020-08-26  cslp018871  <ab625@cslp018871>

	* src/h1jet.f90: This is the starting version, with all files established. Needs to be checked for CP-odd Higgs
